Test on CI with Mac again

--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,15 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = {py38,py39,py310}-{linux,windows,macos},py37-{base,matplotlib,phonopy_reader,all},py37-brille-{linux,windows},py37-minrequirements-linux
+envlist = py38,py39,py310,py37-{base,matplotlib,phonopy_reader,brille,all},py37-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
 [testenv]
-platform =
-    linux: linux
-    windows: win32
-    macos: darwin
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-# Test with all optional extras (except brille on MacOS temporarily,
-# as workaround for incompatible buggy OpenMP 13 which is bundled with
-# Brille 0.5.7. This interferes with other modules too e.g. Pyyaml
-# so don't even install Brille.)
-[testenv:{py38,py39,py310}-{linux,windows,macos}]
+[testenv:{py38,py39,py310}]
 install_command =
     python -m pip install \
         --force-reinstall \
@@ -29,22 +21,17 @@ deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    linux,windows: python -m pip install \
-    linux,windows: --upgrade \
-    linux,windows: --upgrade-strategy eager \
-    linux,windows: '{toxinidir}[matplotlib,phonopy_reader,brille]'
-    macos: python -m pip install \
-    macos: --upgrade \
-    macos: --upgrade-strategy eager \
-    macos: '{toxinidir}[matplotlib,phonopy_reader]'
+    python -m pip install \
+    --upgrade \
+    --upgrade-strategy eager \
+    '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands =
-    linux,windows: {[testenv]test_command} --cov
-    macos: {[testenv]test_command} --cov -m "not brille"
+    {[testenv]test_command} --cov
 
 # Test with no extras
 [testenv:py37-base]
-install_command = {[testenv:py310-linux]install_command}
-deps = {[testenv:py310-linux]deps}
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -54,8 +41,8 @@ commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib o
 
 # Test with matplotlib extra only
 [testenv:py37-matplotlib]
-install_command = {[testenv:py310-linux]install_command}
-deps = {[testenv:py310-linux]deps}
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -65,8 +52,8 @@ commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
 # Test with phonopy_reader extra only
 [testenv:py37-phonopy_reader]
-install_command = {[testenv:py310-linux]install_command}
-deps = {[testenv:py310-linux]deps}
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -74,10 +61,10 @@ commands_pre =
         '{toxinidir}[phonopy_reader]'
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
-# Test with brille extra only (except on MacOS)
-[testenv:py37-brille-{linux,windows}]
-install_command = {[testenv:py310-linux]install_command}
-deps = {[testenv:py310-linux]deps}
+# Test with brille extra only
+[testenv:py37-brille]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -87,21 +74,22 @@ commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py37-all]
-install_command = {[testenv:py310-linux]install_command}
-deps = {[testenv:py310-linux]deps}
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib]'
 commands =
-    linux,windows: {[testenv]test_command} --cov -m multiple_extras
-    macos: {[testenv]test_command} --cov -m "multiple_extras and not brille"
+    {[testenv]test_command} --cov -m multiple_extras
 
 [testenv:py37-minrequirements-linux]
 whitelist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
+platform =
+    linux: linux
 deps =
     numpy==1.14.5
 commands_pre =
