--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
-          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
+          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader,brille]
       - name: Run Sphinx doctests
         working-directory: ./doc
         shell: bash -l {0}
