Add Brille to readthedocs dependencies
Otherwise the BrilleInterpolator docstring isn't visible
as euphonic.brille can't be imported

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,4 +19,5 @@ python:
         extra_requirements:
            - matplotlib
            - phonopy_reader
+           - brille
       - requirements: doc/requirements.txt
