Use of Brille in Euphonic (#104)
* Add Brille to setup.py

* Add function to read symmetry from castep file

* Add initial Brille interpolator

* Add Debye Waller calculation to BrilleInterpolator

* Remove Debye-Waller calculation from Brille Interpolator

* Use more sensible defaults

* Add more sensible grid defaults

* Add BrilleInterpolator to __init__

* Add brille optional dependency to tests

* Small refactor, improvements and add simple tests

- Allow BrilleInterpolator to be created directly from a filled
  Brille grid, and move ease-of-use logic to .from_force_constants
  to allow more flexibility in the future and parity with the
  rest of Euphonic
- Add typing and docstrings
- Add some tests to check object creation (not testing numerical
  results yet)

* Add tests for optional import

* Small style improvements

* Update Brille dependency

* Correctly mark brille tests

Grid must be a fixture so it is not run unless marked
tests are run

* Don't install and test Brille on MacOS

The latest (0.5.7) version of Brille bundles a libomp.dylib file
which uses OpenMP 13. Versions 12 and above seem to be very buggy
on MacOS, see https://github.com/scikit-learn/scikit-learn issue
21182 and related issues.

This can be fixed by downloading a version 11 libomp.dylib (e.g. from
https://anaconda.org/conda-forge/llvm-openmp/11.1.0/download/osx-64/llvm-openmp-11.1.0-hda6cdc1_1.tar.bz2)
and replacing the one bundled in brille/.dylibs. However, this is
something that should probably be fixed in the Brille releases rather
than hacked into our CI so for now just work around it.

* Add multiple_extras test marker

This should be added to any test which needs multiple optional
dependencies e.g. to a test which has both pytest.mark.matplotlib
and pytest.mark.phonopy_reader. This allows
'pytest -m multiple_extras' to be used rather than the convoluted
'pytest -m "(phonopy_reader and matplotlib) or (phonopy_reader and

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py38,py39,py310,py37-{base,matplotlib,phonopy_reader,all},py37-minrequirements-linux
+envlist = py38,py39,py310,py37-{base,matplotlib,phonopy_reader,brille,all},py37-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -15,17 +15,18 @@ install_command =
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
-	{opts} \
-	{packages}
+        {opts} \
+        {packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
-        --upgrade \
-	--upgrade-strategy eager \
-	'{toxinidir}[matplotlib,phonopy_reader]'
-commands = {[testenv]test_command} --cov
+    --upgrade \
+    --upgrade-strategy eager \
+    '{toxinidir}[matplotlib,phonopy_reader,brille]'
+commands =
+    {[testenv]test_command} --cov
 
 # Test with no extras
 [testenv:py37-base]
@@ -34,9 +35,9 @@ deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}'
-commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib)"
+commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py37-matplotlib]
@@ -45,9 +46,9 @@ deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
-commands = {[testenv]test_command} --cov -m "matplotlib and not phonopy_reader"
+commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
 # Test with phonopy_reader extra only
 [testenv:py37-phonopy_reader]
@@ -56,9 +57,20 @@ deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and not matplotlib"
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
+
+# Test with brille extra only
+[testenv:py37-brille]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+        --upgrade-strategy eager \
+        '{toxinidir}[brille]'
+commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py37-all]
@@ -67,9 +79,10 @@ deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
-        '{toxinidir}[phonopy_reader,matplotlib]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and matplotlib"
+        --upgrade-strategy eager \
+        '{toxinidir}[phonopy_reader,matplotlib,brille]'
+commands =
+    {[testenv]test_command} --cov -m multiple_extras
 
 [testenv:py37-minrequirements-linux]
 whitelist_externals = rm
@@ -87,5 +100,5 @@ commands_pre =
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py37 env)
     rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
+    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command}
