--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         include:
           - os: windows-latest
             wheelname: win
@@ -31,6 +31,9 @@ jobs:
           - python-version: 3.10
             manylinux-version-tag: cp310
             numpy-version: 1.21.3
+          - python-version: 3.11
+            manylinux-version-tag: cp311
+            numpy-version: 1.23.2
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -61,7 +64,7 @@ jobs:
 
       - name: Build manylinux Python wheel
         if: matrix.os == 'ubuntu-latest'
-        uses: pypa/cibuildwheel@v2.8.0
+        uses: pypa/cibuildwheel@v2.12.0
         env:
           CIBW_BUILD: ${{ matrix.manylinux-version-tag}}-manylinux*
           CIBW_BEFORE_BUILD: python -mpip install numpy==${{ matrix.numpy-version }}
@@ -70,7 +73,7 @@ jobs:
           output-dir: wheelhouse
 
       - name: Create source distribution
-        if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
+        if: matrix.os == 'windows-latest' && matrix.python-version == '3.11'
         shell: bash -l {0}
         run: |
           python setup.py sdist
@@ -81,7 +84,7 @@ jobs:
             name: wheels
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
       - name: Upload source dist to PyPI
-        if: github.event_name == 'release' && matrix.os == 'windows-latest' && matrix.python-version == '3.10'
+        if: github.event_name == 'release' && matrix.os == 'windows-latest' && matrix.python-version == '3.11'
         shell: bash -l {0}
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
