--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = pypi-py37-min,pypi-py37,conda-py38-old-np,{pypi,conda}-{py38,py39,py310,py311},pypisource-{py37,py311}
+envlist = pypi-py38-min,conda-py38-old-np,{pypi,conda}-{py38,py39,py310,py311},pypisource-{py38,py311}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -11,7 +11,7 @@ changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
 # Test PyPI source distribution
-[testenv:pypisource-{py37,py311}]
+[testenv:pypisource-{py38,py311}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -24,7 +24,7 @@ commands_pre =
 commands = {[testenv]test_command}
 
 
-[testenv:pypi-{py37,py38,py39,py310,py311}]
+[testenv:pypi-{py38,py39,py310,py311}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -36,10 +36,10 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py37-min]
+[testenv:pypi-py38-min]
 install_command = python -m pip install --force-reinstall {opts} {packages}
 deps =
-    numpy==1.14.5
+    numpy==1.19.5
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
