Testing: restore cleanup of extension build dir

--- a/tox.ini
+++ b/tox.ini
@@ -97,5 +97,7 @@ commands_pre =
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    # Force rebuild of euphonic extension to avoid Numpy clash
+    rm -rf {toxinidir}/build
     python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command}
