--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -41,6 +41,8 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: ${{ matrix.python-version }}
+          channels: conda-forge,defaults
+          channel-priority: true
       - name: Update Python pip, wheel, and twine
         shell: bash -l {0}
         run: |
