--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,9 +10,13 @@ sphinx:
    configuration: doc/source/conf.py
    builder: html
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
+
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.8
    install:
       - requirements: doc/requirements.txt
       - method: pip
