--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -33,9 +33,6 @@ jobs:
             numpy-version: 1.23.2
       fail-fast: false
     runs-on: ${{ matrix.os }}
-    environment:
-      name: pypi
-      url: https://pypi.org/p/euphonic
     permissions:
       id-token: write
     steps:
@@ -97,15 +94,29 @@ jobs:
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
 
   publish:
-    runs-on: ubuntu-latest
     needs: build
+    name: Upload release to PyPI
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/euphonic
     permissions:
       id-token: write
     steps:
-      - name: Download build artifacts to Ubuntu environment
+      - name: Download source package to Ubuntu environment
         uses: actions/download-artifact@v4
         with:
+          name: python source distribution
           path: dist/
+
+      - name: Download binary artifacts to Ubuntu environment
+        uses: actions/download-artifact@v4
+        with:
+          name: binary wheels
+          path: dist/
+
+      - name: List Files
+        run: ls -R
 
       - name: Upload wheels to PyPI
         # if: github.event_name == 'release'
