Pass CC into tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ skipsdist = True
 [testenv]
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
+passenv = CC
 
 [testenv:{py38,py39,py310,py311}]
 install_command =
