Add CXX for Brille
Euphonic doesn't seem to like GCC-14 very much but first let's see if
this is enough to get Brille building

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,9 @@ skipsdist = True
 [testenv]
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
-passenv = CC
+passenv =
+    CC
+    CXX
 
 [testenv:{py38,py39,py310,py311}]
 install_command =
