--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -32,10 +32,12 @@ jobs:
         run: |
           brew install llvm@14
           echo "CC=gcc-14" >> "$GITHUB_ENV"
+          echo "CXX=g++-14" >> "$GITHUB_ENV"
       - name: check if CC was set
         shell: bash -l {0}
         run: |
           echo "Value of CC: $CC"
+          echo "Value of CXX: $XX"
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
