--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Install llvm on Macos
         if: startsWith(matrix.os, 'macos')
         run: |
-          brew install llvm@14
-          echo "CC=gcc-14" >> $GITHUB_ENV
+          brew install llvm
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
