--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -14,7 +14,7 @@ jobs:
         include:
           - os: windows-latest
             wheelname: win
-          - os: macos-latest
+          - os: macos-12
             wheelname: macos
           - os: ubuntu-latest
             wheelname: manylinux
