Flatten q-point indices for compatibility with Numpy 2.0 (#303)
* Flatten q-point indices for compatibility with Numpy 2.0

With Numpy 2.0, np.unique returns a 2-D array when applied to
q-points. This in turn gets broadcast and adds an extra dimension to
the frequency/mode arrays, causing all kinds of chaos.

Flattening the array here should be a no-op for Numpy <2 and fixes the
issue.

*  Update deprecated scipy.integrate simps -> simpson

*  Pin Mac tests to macos-12 environment for Brille compatibility

Hopefully we can return to macos-latest soon once Brille build issues are resolved

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-12]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -22,7 +22,8 @@ jobs:
           channel-priority: true
       - name: Install llvm on Macos
         if: startsWith(matrix.os, 'macos')
-        run: brew install llvm
+        run: |
+          brew install llvm
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
