Build on mac-13 (latest intel Mac builder)
We are running into trouble building Numpy on the ARM Mac
builders. This seems to be related to Numpy's openblas configuration;
older Numpy versions didn't easily build on ARM Mac.

Soon we will drop Py 3.8 / 3.9 and the problem should go away...

--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -9,12 +9,12 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-13, ubuntu-latest]
         python-version: ['3.8', '3.9', '3.10', '3.11']
         include:
           - os: windows-latest
             wheelname: win
-          - os: macos-latest
+          - os: macos-13
             wheelname: macos
           - os: ubuntu-latest
             wheelname: manylinux
