--- a/release_tox.ini
+++ b/release_tox.ini
@@ -24,16 +24,28 @@ commands_pre =
 commands = {[testenv]test_command}
 
 
-[testenv:pypi-{py38,py39,py310,py311}]
+[testenv:pypi-{py38}]
 install_command = python -m pip install {opts} {packages}
 deps =
-    numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
     --force-reinstall \
     'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
+    python -m pip install numpy==1.24
+commands = {[testenv]test_command}
+
+[testenv:pypi-{py39,py310,py311}]
+install_command = python -m pip install {opts} {packages}
+deps =
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+commands_pre =
+    python -m pip install \
+    --force-reinstall \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
+    python -m pip install numpy==1.26
 commands = {[testenv]test_command}
 
 [testenv:pypi-py38-min]
