Drop Python 3.8, 3.9 and add Python 3.12

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = pypi-py38-min,conda-py38-old-np,{pypi,conda}-{py38,py39,py310,py311},pypisource-{py38,py311}
+envlist = pypi-py310-min,conda-py310-old-np,{pypi,conda}-{py310,py311,py312},pypisource-{py310,py312}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -11,7 +11,7 @@ changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
 # Test PyPI source distribution
-[testenv:pypisource-{py38,py311}]
+[testenv:pypisource-{py310,py312}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -24,7 +24,7 @@ commands_pre =
 commands = {[testenv]test_command}
 
 
-[testenv:pypi-{py38,py39,py310,py311}]
+[testenv:pypi-{py310,py311,py312}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -36,10 +36,10 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py38-min]
+[testenv:pypi-py310-min]
 install_command = python -m pip install --force-reinstall {opts} {packages}
 deps =
-    numpy==1.19.5
+    numpy==1.21.3
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
@@ -50,7 +50,7 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:conda-{py38,py39,py310,py311}]
+[testenv:conda-{py310,py311,py312}]
 whitelist_externals = conda
 install_command = conda install {packages}
 conda_channels =
@@ -65,7 +65,7 @@ commands = {[testenv]test_command} -m "not brille"
 
 # Test against a version of Numpy less than the latest for Conda
 # See https://github.com/conda-forge/euphonic-feedstock/pull/20
-[testenv:conda-py38-old-np]
+[testenv:conda-py310-old-np]
 whitelist_externals = conda
 install_command = conda install {packages}
 conda_channels =
@@ -74,7 +74,7 @@ conda_channels =
 conda_deps =
     --file={toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    conda install numpy=1.20
+    conda install numpy=1.22
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
 # Brille not available on conda
 commands = {[testenv]test_command} -m "not brille"
