--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py38,py39,py310,py311,py38-{base,matplotlib,phonopy_reader,brille,all},py38-minrequirements-linux
+envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -9,7 +9,7 @@ skipsdist = True
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-[testenv:{py38,py39,py310,py311}]
+[testenv:{py310,py311,py312}]
 install_command =
     python -m pip install \
         --force-reinstall \
@@ -29,7 +29,7 @@ commands =
     {[testenv]test_command} --cov
 
 # Test with no extras
-[testenv:py38-base]
+[testenv:py310-base]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
@@ -40,7 +40,7 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
-[testenv:py38-matplotlib]
+[testenv:py310-matplotlib]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
@@ -51,7 +51,7 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
 # Test with phonopy_reader extra only
-[testenv:py38-phonopy_reader]
+[testenv:py310-phonopy_reader]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
@@ -62,7 +62,7 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
 # Test with brille extra only
-[testenv:py38-brille]
+[testenv:py310-brille]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
@@ -73,7 +73,7 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
-[testenv:py38-all]
+[testenv:py310-all]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
@@ -84,14 +84,14 @@ commands_pre =
 commands =
     {[testenv]test_command} --cov -m multiple_extras
 
-[testenv:py38-minrequirements-linux]
+[testenv:py310-minrequirements-linux]
 whitelist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
-    numpy==1.19.5
+    numpy==1.21.3
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
