--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: 3.8
+          python-version: "3.10"
           channels: conda-forge,defaults
           channel-priority: true
       - name: Install llvm on Macos
@@ -36,10 +36,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
-      - name: Run tests, skip Python 3.9, 3.10 unless workflow dispatch
+      - name: Run tests, skip Python 3.11 unless workflow dispatch
         if: github.event_name != 'workflow_dispatch'
         env:
-          TOX_SKIP_ENV: '.*?(py39|py310).*?'
+          TOX_SKIP_ENV: '.*?(py311).*?'
         shell: bash -l {0}
         run: python -m tox
       - name: Run tests, workflow dispatch so test all Python versions
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: 3.8
+          python-version: 3.10
           channels: conda-forge,defaults
           channel-priority: true
       - name: Update pip and install dependencies
