--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -10,14 +10,14 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-13]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.8
+          python-version: 3.10
           channels: conda-forge,defaults
           channel-priority: true
       - name: Install llvm on Macos
