--- a/.github/workflows/create-landing-page.yml
+++ b/.github/workflows/create-landing-page.yml
@@ -17,7 +17,7 @@ jobs:
           ref: gh-pages
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
       - name: Update pip and install dependencies
         run: |
           python -m pip install --upgrade pip
