--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: "3.10"
+          python-version: '3.10'
           channels: conda-forge,defaults
           channel-priority: true
       - name: Install llvm on Macos
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: 3.10
+          python-version: '3.10'
           channels: conda-forge,defaults
           channel-priority: true
       - name: Update pip and install dependencies
