--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.10
+          python-version: '3.10'
           channels: conda-forge,defaults
           channel-priority: true
       - name: Install llvm on Macos
