--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,6 @@ install_command =
         {opts} \
         {packages}
 deps =
-    numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
@@ -90,8 +89,7 @@ install_command =
     python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
-deps =
-    numpy==1.21.3
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
