Yes, tox does need Numpy to build things

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ install_command =
         {opts} \
         {packages}
 deps =
+    numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
