--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,9 @@ install_command =
     python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
-deps = {[testenv:py310]deps}
+deps =
+    numpy==1.24.0
+    {[testenv:py310]deps}
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
