--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-#envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-linux
-envlist = py310,py312,py310-minrequirements-linux
+envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -92,7 +91,7 @@ install_command =
 platform =
     linux: linux
 deps =
-    numpy==1.24.4
+    numpy==1.24.0
     {[testenv:py310]deps}
 commands_pre =
     python -m pip install --force-reinstall \
