--- a/tox.ini
+++ b/tox.ini
@@ -91,7 +91,8 @@ install_command =
 platform =
     linux: linux
 deps =
-    numpy==1.21.3
+    numpy==1.24.0
+    {[testenv:py310]deps}
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
