Wheel as explicit dep for tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ install_command =
         {packages}
 deps =
     numpy
+    wheel==0.43
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
