--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,5 +1,7 @@
 numpy>=1.21.3
+setuptools==71.1.0
 sphinx==5.3.0
 sphinx-argparse==0.3.2
 sphinx-autodoc-typehints==1.19.5
 sphinx-rtd-theme==1.1.1
+wheel==0.43
