Use pytest-xdist for all tests within tox
The pytest-xdist plugin allows pytest to distribute the tests to
"workers". Here we have quite an aggressive configuration:

- use as many workers as there are available CPUs.

  - This should be beneficial as we have quite a large number of
  short/fast tests to spread over workers.

- when a worker has run out of jobs, allow it to "steal" remaining
  jobs from other workers

  - This should be beneficial as there are a few tests which are much
    slower, and we don't want them to run in series on the same worker
    while others sit idle.

We might need to do some funny business and let certain tests run
independently... But so far this works pretty well on my laptop.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-test_command = python run_tests.py --report
+test_command = python run_tests.py --report --parallel
 
 [testenv:{py310,py311,py312}]
 install_command =
