Switch coverage checks to pytest-cov
pytest-cov uses Coverage but makes a few tweaks. The most important
change here is that it supports pytest-xdist by allowing each runner
to append information to .coverage. (This does make it more important
to delete .coverage occasionally...)

However, it also changes the workflow a bit for generating report
files. Some time was spent figuring out how to make that work!

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ skipsdist = True
 [testenv]
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report --parallel
+setenv =
+  COVERAGE_PROCESS_START = {toxinidir}/tests_and_analysis/test/.coveragerc
+  COV_CORE_CONFIG = {toxinidir}/tests_and_analysis/test/.coveragerc
+  COV_CORE_DATAFILE = {toxinidir}/tests_and_analysis/test/.coverage
+  COV_CORE_SOURCE =
 
 [testenv:{py310,py311,py312}]
 install_command =
