Run brille tests without --parallel, seems to be quicker

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-test_command = python run_tests.py --report --parallel
+test_command = python run_tests.py --report
 setenv =
   COVERAGE_PROCESS_START = {toxinidir}/tests_and_analysis/test/.coveragerc
   COV_CORE_CONFIG = {toxinidir}/tests_and_analysis/test/.coveragerc
@@ -31,7 +31,7 @@ commands_pre =
     --upgrade-strategy eager \
     '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands =
-    {[testenv]test_command} --cov
+    {[testenv]test_command} --cov --parallel
 
 # Test with no extras
 [testenv:py310-base]
@@ -42,7 +42,7 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}'
-commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
+commands = {[testenv]test_command} --cov --parallel -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py310-matplotlib]
@@ -53,7 +53,7 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
-commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
+commands = {[testenv]test_command} --cov --parallel -m "matplotlib and not multiple_extras"
 
 # Test with phonopy_reader extra only
 [testenv:py310-phonopy_reader]
@@ -64,9 +64,10 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
+commands = {[testenv]test_command} --cov --parallel -m "phonopy_reader and not multiple_extras"
 
 # Test with brille extra only
+# -- this one is actually faster without --parallel
 [testenv:py310-brille]
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
@@ -87,7 +88,7 @@ commands_pre =
         --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib,brille]'
 commands =
-    {[testenv]test_command} --cov -m multiple_extras
+    {[testenv]test_command} --cov --parallel -m multiple_extras
 
 [testenv:py310-minrequirements-linux]
 whitelist_externals = rm
