--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,7 +24,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: |
+              3.10
+              3.11
+              3.12
       - name: Install llvm on Macos
         if: startsWith(matrix.os, 'macos')
         run: |
