Update CHANGELOG.rst and clean up tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,7 @@ install_command =
         --upgrade \
         --upgrade-strategy eager \
         {opts} \
-        {packages} \
-        --config-setting=setup-args='--vsenv'
+        {packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
@@ -88,7 +87,7 @@ commands =
 [testenv:py310-minrequirements-linux]
 whitelist_externals = rm
 install_command =
-    python -m pip install --force-reinstall {opts} {packages} --config-setting=setup-args='--vsenv'
+    python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
