--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-requires = tox-conda
 # The python environments to run the tests in
 envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
+whitelist_externals = git
 
 [testenv]
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
+passenv = CC CC_LD LDFLAGS CPPFLAGS
 
 [testenv:{py310,py311,py312}]
 install_command =
