--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,5 +23,5 @@ python:
         path: .
         extra_requirements:
            - matplotlib
-           - phonopy_reader
+           - phonopy-reader
            - brille
