--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,9 +53,10 @@ documentation = "https://euphonic.readthedocs.io/en/stable/"
 
 [project.optional-dependencies]
 matplotlib = ["matplotlib>=3.8.0"]
-phonopy_reader = ["h5py>=3.6.0", "PyYAML>=6.0"]
+phonopy_reader = ["h5py>=3.6.0", "PyYAML>=6.0"]  # Deprecated, will be removed in future versions.
+phonopy-reader = ["h5py>=3.6.0", "PyYAML>=6.0"]
 brille = ["brille>=0.7.0"]
-test = ["mock", "pytest~=7.0", "coverage", "pytest-mock", "pytest-lazy-fixture", "pytest-xvfb"]
+test = ["mock", "pytest~=7.0", "coverage", "pytest-mock", "pytest-lazy-fixture", "pytest-xvfb", "python-slugify"]
 
 [project.scripts]
 euphonic-brille-convergence = "euphonic.cli.brille_convergence:main"
