--- a/tests_and_analysis/test/pytest.ini
+++ b/tests_and_analysis/test/pytest.ini
@@ -4,3 +4,4 @@ markers =
     matplotlib: requires euphonic[matplotlib] extra to be installed
     brille: requires euphonic[brille] extra to be installed
     multiple_extras: requires any combination of the above extras e.g. phonopy_reader and matplotlib
+    c_extension: Requires c extension compiled
