Migrate to tox 4

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -73,16 +73,13 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         env:
           TOX_SKIP_ENV: '.*?(py311).*?'
-          TOX_PARALLEL_NO_SPINNER: 1
         shell: bash -l {0}
-        run: python -m tox --parallel
+        run: python -m tox run-parallel
 
       - name: Run tests, workflow dispatch so test all Python versions
         if: github.event_name == 'workflow_dispatch'
-        env:
-          TOX_PARALLEL_NO_SPINNER: 1
         shell: bash -l {0}
-        run: python -m tox --parallel
+        run: python -m tox run-parallel
 
       - name: Upload test results
         if: always()
