--- a/.github/workflows/test_windows_sdist.yml
+++ b/.github/workflows/test_windows_sdist.yml
@@ -1,7 +1,7 @@
 name: test-sdist
 on:
-  pull_request:
-    types: [opened, reopened, labeled, synchronize]
+  # pull_request:
+  #   types: [opened, reopened, labeled, synchronize]
 
 jobs:
   build:
